Blog: fixed card width and subheader alignment for phone sizes

--- a/src/Blog/Blog.css
+++ b/src/Blog/Blog.css
@@ -9,7 +9,6 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
   font-size: calc(10px + 2vmin);
   color: white;
   display: flex;
@@ -17,6 +16,15 @@
   align-items: center;
   justify-content: center;
   gap: 100px;
+  height: 100vh;
+}
+
+.Blog-Page.Desktop {
+  height: 100vh;
+}
+
+.Blog-Page.Phone {
+  height: 200vh;
 }
 
 .Blog-Page::before {
@@ -35,7 +43,15 @@
       rgba(5, 14, 19, 0) 40%
     );
   width: 100vw;
-  height: 100%;
+  height: 100vh;
+}
+
+.Blog-Page.Desktop::before {
+  height: 100vh;
+}
+
+.Blog-Page.Phone::before {
+  height: 200vh;
 }
 
 .Blog-Header-Subheader-Container {
@@ -57,6 +73,7 @@
 
 .Blog-Header-Subheader-Container.Phone {
   margin-top: 20%;
+  text-align: center;
 }
 
 .Blog-Container-Desktop {
@@ -86,8 +103,16 @@
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.2) !important;
   background-color: rgba(22, 22, 22, 0.8) !important;
   margin-top: 2rem !important;
-  width: 13.5% !important;
   line-height: 1;
+  width: 13.5% !important;
+}
+
+.Blog-Card.Desktop {
+  width: 13.5% !important;
+}
+
+.Blog-Card.Phone {
+  width: 42% !important;
 }
 
 .Blog-Title-Date-Pills-Container {
@@ -130,6 +155,10 @@
   color: white !important;
   border: 1px solid white !important;
   border-radius: 2em !important;
+}
+
+.Blog-RF-Button.Phone {
+  font-size: 0.55em !important;
 }
 
 .Blog-Card.Pop-in {
